jACBrFramework/ACBrFramework_JNI/include/ACBrTEF.h

#define ACBr

typedef void* INTPTR;
#define DllImport extern "C"
#define DllImport extern


typedef void (*AntesCancelarTransacaoCallback) (INTPTR RespostaPendente);


typedef void (*DepoisCancelarTransacoesCallback) (INTPTR RespostasPendentes);


typedef void (*MudaEstadoReqCallback) (ACBrTEFDReqEstado EstadoReq);


typedef void (*MudaEstadoRespCallback) (ACBrTEFDRespEstado EstadoResp);

DllImport int TEF_SetOnAntesCancelarTransacao(const INTPTR tefHandler, const AntesCancelarTransacaoCallback method);

DllImport int TEF_SetOnDepoisCancelarTransacoes(const INTPTR tefHandler, const DepoisCancelarTransacoesCallback method);

DllImport int TEF_SetOnMudaEstadoReq(const INTPTR tefHandler, const MudaEstadoReqCallback method);

DllImport int TEF_SetOnMudaEstadoResp(const INTPTR tefHandler, const MudaEstadoRespCallback method);